--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HOME</title>
         <script src="https://kit.fontawesome.com/efc0d862ff.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/stilos.css">
+        <link rel="stylesheet" href="./css/stilos.css">
     </head>
     <body>
         
